# telefold

./: .gitignore  README.md  config.example.jsonc  pyproject.toml
telefold/: classifier.py  cli.py  client.py  config.py
