[project]
name = "telefold"
version = "0.1.0"
description = "LLM 驱动的 Telegram 分组自动整理工具"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.38",
    "httpx>=0.27",
    "pydantic-ai>=0.2",
    "typer>=0.15",
    "json5>=0.10",
]

[project.scripts]
telefold = "telefold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
